🔥 Remove versioning from the main example
