# src/Unlocked.Api/Endpoints/PostLockByIdUnlock.cs
@@ -1,29 +1,22 @@
 using System.ComponentModel.DataAnnotations;
 
-using Asp.Versioning;
-
 using Microsoft.AspNetCore.Http.HttpResults;
-using Microsoft.AspNetCore.Mvc;
 
 using Unlocked.Api.Endpoints.Models;
 
 namespace Unlocked.Api.Endpoints;
 
-internal static class PostLockByIdUnlockV2
+internal static class PostLockByIdUnlock
 {
-    internal static void MapPostLockByIdUnlockV2(this IEndpointRouteBuilder routes)
+    internal static void MapPostLockByIdUnlock(this IEndpointRouteBuilder routes)
     {
         routes
-            .MapPost("locks/{lockId:guid}/unlock", Handler)
-            .HasApiVersion(new ApiVersion(2))
-            .WithName(nameof(PostLockByIdUnlockV2));
+            .MapPost("locks/unlock", Handler)
+            .WithName(nameof(PostLockByIdUnlock));
     }
 
     internal class UnlockRequestBody
     {
-        [MinLength(6)]
-        [MaxLength(6)]
-        public required string Pin { get; set; }
     }
 
     internal class UnlockResponse
@@ -32,9 +25,7 @@ internal static class PostLockByIdUnlockV2
     }
 
     private static async Task<Results<Ok<UnlockResponse>, NotFound, ProblemHttpResult>> Handler(
-        [FromRoute] Guid lockId,
         UnlockRequestBody requestBody,
-        ApiVersion apiVersion,
         CancellationToken cancellationToken)
     {
         // Simulate some async work
